[package]
name = "pmv"
description = "Pattern based mv(1)"
version = "0.4.2"
authors = ["Suguru Yamamoto <sgryjp@gmail.com>"]
repository = "https://github.com/sgryjp/pmv"
readme = "README.md"
license = "MIT"
categories = ["command-line-utilities", "filesystem"]
edition = "2018"

[dependencies]
atty = "~0.2"
rand = "0.8.5"
termcolor = "1.1"

[dependencies.clap]
version = "3.2.5"
features = ["cargo", "color", "deprecated", "wrap_help"]

[dev-dependencies]
function_name = "~0.3.0"
