[package]
name = "pmv"
description = "Pattern based mv(1)"
version = "0.4.3"
authors = ["Suguru Yamamoto <sgryjp@gmail.com>"]
repository = "https://github.com/sgryjp/pmv"
readme = "README.md"
license = "MIT OR Apache-2.0"
categories = ["command-line-utilities", "filesystem"]
edition = "2021"

[dependencies]
rand = "0.9.0"
termcolor = "1.4.1"

[dependencies.clap]
version = "4.5.36"
features = ["cargo", "color", "deprecated", "wrap_help"]

[dev-dependencies]
function_name = "0.3.0"
